# kicad-library-validator

./: .gitignore  README.md  library_report.md  py.typed  pyproject.toml  test_library_report.md
.github/workflows/: ci-tests.yml
docs/: advanced-usage.md  overview.md  structure-file.md  utility_scripts.md
kicad_lib_validator/: __init__.py  reporter.py  validator.py
kicad_lib_validator/models/: __init__.py  base.py  documentation.py  footprint.py  library.py  model3d.py  structure.py  symbol.py  validation.py
kicad_lib_validator/parser/: __init__.py  library_parser.py  structure_parser.py
kicad_lib_validator/utils/: create_library_structure.py  generate_library_tables.py  generate_report.py  git_diff.py  update_kicad_tables.py
kicad_lib_validator/validators/: document_validator.py  documentation_validator.py  footprint_validator.py  model3d_validator.py  symbol_validator.py
kicad_library_validator/: __init__.py  reporter.py
kicad_library_validator/models/: __init__.py  documentation.py  footprint.py  library.py  model3d.py  structure.py  symbol.py
kicad_library_validator/parser/: library_parser.py
scripts/: format_code.sh  generate_test_report.py  run_tests.py  setup_dev.py  validate_library.py
templates/: README.md
templates/github/: pr_template.md
templates/github/workflows/: library-validation.yml
tests/: test_document_validator.py  test_footprint_validator.py  test_library_parser.py  test_model3d_validator.py  test_reporter.py  test_structure_parser.py  test_symbol_validator.py  test_validator.py
tests/test_kicad_lib/: test_library_structure.yaml
(+5 files in other folders)
