[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-library-validator"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A tool for validating KiCad component libraries"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "pydantic>=2.0.0",
    "sexpdata>=0.0.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pytest",
    "pytest-cov",
    "pydantic>=2.0.0"
]

test = [
    "pytest",
    "pytest-cov",
    "types-PyYAML"
]

[tool.hatch.build.targets.wheel]
packages = ["kicad_lib_validator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=kicad_lib_validator --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = []
exclude = 'site-packages'

[mypy-sexpdata]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = [] 